AWS-3TIER/asg.tf
####################################################
##### AUTO SCALING GROUP FOR PRESENTATION TIER #####
####################################################

resource "aws_launch_template" "auto-scaling-group" {
  name_prefix   = "auto-scaling-group"
  image_id      = "ami-052efd3df9dad4825"
  instance_type = "t2.micro"
  key_name      = "source_key"
  user_data     = file("install-apache.sh")

  network_interfaces {
    vpc_security_group_ids = [aws_security_group.webserver-security-group.id]
    subnet_id              = aws_subnet.public_web_subnet-1.id
  }
}

resource "aws_autoscaling_group" "asg-1" {
  availability_zones = ["us-east-1a"]
  desired_capacity   = 1
  max_size           = 2
  min_size           = 1

  launch_template {
    id      = aws_launch_template.auto-scaling-group.id
    version = "$Latest"
  }
}


####################################################
##### AUTO SCALING GROUP FOR APPLICATION TIER ######
####################################################

resource "aws_launch_template" "auto-scaling-group-private" {
  name_prefix   = "auto-scaling-group-private"
  image_id      = "ami-052efd3df9dad4825"
  instance_type = "t2.micro"
  key_name      = "source_key"

  network_interfaces {
    vpc_security_group_ids = [aws_security_group.ssh-security-group.id]
    subnet_id              = aws_subnet.private_app_subnet-1.id
  }
}

resource "aws_autoscaling_group" "asg-2" {
  availability_zones = ["us-east-1a"]
  desired_capacity   = 1
  max_size           = 2
  min_size           = 1

  launch_template {
    id      = aws_launch_template.auto-scaling-group.id
    version = "$Latest"
  }
}
